Add public functions in v0.0.2
